deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-postgres
  labels:
    app: app-postgres
  namespace: postgres
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: app-postgres
  template:
    metadata:
      labels:
        app: app-postgres
    spec:
      #hostNetwork: true
      containers:
      - image: postgres:10.13
        name: postgres
        ports:
          - containerPort: 5432
        volumeMounts:
          - name: postgres-pvc
            mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-pvc
          persistentVolumeClaim:
            claimName: postgres-pv-claim
