redmine-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-redmine
  labels:
    app: app-redmine
  namespace: postgres
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: app-redmine
  template:
    metadata:
      labels:
        app: app-redmine
    spec:
      hostNetwork: true
      containers:
      - image: redmine:4.1.1
        name: redmine
        ports:
          - containerPort: 3000
