database-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    app: app-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
