redmine-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redmine-service
  namespace: postgres
spec:
  selector:
    app: app-redmine
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
