redmine-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redmine-ingress
  namespace: postgres
spec:
  ingressClassName: nginx
  rules:
    - host: redmine.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redmine-service
                port:
                  number: 3000
